# wiki-vault

./: .gitignore  README.md  pyproject.toml
src/wiki_vault/: __init__.py  cli.py
src/wiki_vault/commands/: compile.py  ingest.py  init.py
src/wiki_vault/templates/: claude_md.py
src/wiki_vault/utils/: catalog.py  config.py  git.py  index.py  log.py  manifest.py  wiki.py
